--- a/addressbook-selenium-test/test-output/index.html
+++ b/addressbook-selenium-test/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>F:\Users\Gena\AppData\Local\Temp\testng-eclipse--387849857\testng-customsuite.xml</span>
+                    <span>F:\Users\Gena\AppData\Local\Temp\testng-eclipse--1695600454\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,17 +101,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.example.tests.ContactCreationTests" hash-for-method="testEmptyContactCreated">testEmptyContactCreated</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.example.tests.GroupCreationTests" hash-for-method="testEmptyGroupCreation">testEmptyGroupCreation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.example.tests.AlsoGroupCreationTests" hash-for-method="testEmptyGroupCreation">testEmptyGroupCreation</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.example.tests.AlsoGroupCreationTests" hash-for-method="testNonEmptyGroupCreation">testNonEmptyGroupCreation</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.example.tests.ContactCreationTests" hash-for-method="testNonEmptyContactCreated">testNonEmptyContactCreated</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -156,21 +156,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.example.tests.AlsoGroupCreationTests</span>
+              <span class="class-name">com.example.tests.ContactCreationTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testEmptyGroupCreation">
-                  </a> <!-- testEmptyGroupCreation -->
-                  <span class="method-name">testEmptyGroupCreation</span>
+                  <a name="testEmptyContactCreated">
+                  </a> <!-- testEmptyContactCreated -->
+                  <span class="method-name">testEmptyContactCreated</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testNonEmptyGroupCreation">
-                  </a> <!-- testNonEmptyGroupCreation -->
-                  <span class="method-name">testNonEmptyGroupCreation</span>
+                  <a name="testNonEmptyContactCreated">
+                  </a> <!-- testNonEmptyContactCreated -->
+                  <span class="method-name">testNonEmptyContactCreated</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -178,7 +178,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\Users\Gena\AppData\Local\Temp\testng-eclipse--387849857\testng-customsuite.xml</span>
+            <span class="header-content">F:\Users\Gena\AppData\Local\Temp\testng-eclipse--1695600454\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -190,7 +190,8 @@
       &lt;class name=&quot;com.example.tests.TestBase&quot;/&gt;
       &lt;class name=&quot;com.example.tests.GroupCreationTests&quot;/&gt;
       &lt;class name=&quot;com.example.tests.GroupData&quot;/&gt;
-      &lt;class name=&quot;com.example.tests.AlsoGroupCreationTests&quot;/&gt;
+      &lt;class name=&quot;com.example.tests.ContactCreationTests&quot;/&gt;
+      &lt;class name=&quot;com.example.tests.ContactData&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -204,7 +205,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (4 classes)</span>
+                <span class="test-name">Default test (5 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -232,26 +233,26 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testNonEmptyGroupCreation')
-data.setCell(0, 2, 'com.example.tests.GroupCreationTests')
-data.setCell(0, 3, 2309);
+data.setCell(0, 1, 'testNonEmptyContactCreated')
+data.setCell(0, 2, 'com.example.tests.ContactCreationTests')
+data.setCell(0, 3, 3826);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testNonEmptyGroupCreation')
-data.setCell(1, 2, 'com.example.tests.AlsoGroupCreationTests')
-data.setCell(1, 3, 1785);
+data.setCell(1, 1, 'testEmptyContactCreated')
+data.setCell(1, 2, 'com.example.tests.ContactCreationTests')
+data.setCell(1, 3, 3451);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testEmptyGroupCreation')
-data.setCell(2, 2, 'com.example.tests.AlsoGroupCreationTests')
-data.setCell(2, 3, 1783);
+data.setCell(2, 1, 'testNonEmptyGroupCreation')
+data.setCell(2, 2, 'com.example.tests.GroupCreationTests')
+data.setCell(2, 3, 2926);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testEmptyGroupCreation')
 data.setCell(3, 2, 'com.example.tests.GroupCreationTests')
-data.setCell(3, 3, 1777);
+data.setCell(3, 3, 2357);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -270,7 +271,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.example.tests.AlsoGroupCreationTests</span>
+              <span class="ignored-class-name">com.example.tests.ContactCreationTests</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">setUp</span>
                 <br/>
@@ -302,29 +303,29 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">testEmptyGroupCreation</span>
-                <span class="method-start">6533 ms</span>
+                <span class="method-start">8512 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testNonEmptyGroupCreation</span>
-                <span class="method-start">8310 ms</span>
+                <span class="method-start">10870 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.example.tests.AlsoGroupCreationTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.example.tests.ContactCreationTests</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testEmptyGroupCreation</span>
-                <span class="method-start">10620 ms</span>
+                <span class="method-name">testEmptyContactCreated</span>
+                <span class="method-start">13797 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testNonEmptyGroupCreation</span>
-                <span class="method-start">12403 ms</span>
+                <span class="method-name">testNonEmptyContactCreated</span>
+                <span class="method-start">17249 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.example.tests.GroupCreationTests</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">14190 ms</span>
+                <span class="method-start">21077 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
