--- a/addressbook-selenium-test/test-output/old/Default suite/classes.html
+++ b/addressbook-selenium-test/test-output/old/Default suite/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.example.tests.AlsoGroupCreationTests</td>
+<td>com.example.tests.ContactCreationTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testNonEmptyGroupCreation</td>
+<td>testEmptyContactCreated</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testEmptyGroupCreation</td>
+<td>testNonEmptyContactCreated</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
