Decomposition of tests
This is a result of homework #3

--- a/addressbook-selenium-test/test-output/old/Default suite/methods.html
+++ b/addressbook-selenium-test/test-output/old/Default suite/methods.html
@@ -1,16 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="64a371">  <td>15/06/21 13:19:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.example.tests.GroupCreationTests@5fe5c6f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@226170135</td>   <td></td> </tr>
-<tr bgcolor="a6a697">  <td>15/06/21 13:19:26</td>   <td>8509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@5fe5c6f]">testEmptyGroupCreation</td> 
-  <td>main@226170135</td>   <td></td> </tr>
-<tr bgcolor="a6a697">  <td>15/06/21 13:19:29</td>   <td>10867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testNonEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@5fe5c6f]">testNonEmptyGroupCreation</td> 
-  <td>main@226170135</td>   <td></td> </tr>
-<tr bgcolor="86b085">  <td>15/06/21 13:19:32</td>   <td>13794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactCreationTests.testEmptyContactCreated()[pri:0, instance:com.example.tests.ContactCreationTests@387c703b]">testEmptyContactCreated</td> 
-  <td>main@226170135</td>   <td></td> </tr>
-<tr bgcolor="86b085">  <td>15/06/21 13:19:35</td>   <td>17246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactCreationTests.testNonEmptyContactCreated()[pri:0, instance:com.example.tests.ContactCreationTests@387c703b]">testNonEmptyContactCreated</td> 
-  <td>main@226170135</td>   <td></td> </tr>
-<tr bgcolor="64a371">  <td>15/06/21 13:19:39</td>   <td>21074</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.tests.GroupCreationTests@5fe5c6f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@226170135</td>   <td></td> </tr>
+<tr bgcolor="64a371">  <td>15/06/21 18:34:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.example.tests.GroupCreationTests@270421f5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1918627686</td>   <td></td> </tr>
+<tr bgcolor="a6a697">  <td>15/06/21 18:34:59</td>   <td>6840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@270421f5]">testEmptyGroupCreation</td> 
+  <td>main@1918627686</td>   <td></td> </tr>
+<tr bgcolor="a6a697">  <td>15/06/21 18:35:01</td>   <td>8978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testNonEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@270421f5]">testNonEmptyGroupCreation</td> 
+  <td>main@1918627686</td>   <td></td> </tr>
+<tr bgcolor="64a371">  <td>15/06/21 18:35:04</td>   <td>11410</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.tests.GroupCreationTests@270421f5]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1918627686</td>   <td></td> </tr>
+<tr bgcolor="64a371">  <td>15/06/21 18:35:05</td>   <td>12202</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.example.tests.ContactCreationTests@6979e8cb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1918627686</td>   <td></td> </tr>
+<tr bgcolor="f265aa">  <td>15/06/21 18:35:11</td>   <td>18257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactCreationTests.testEmptyContactCreated()[pri:0, instance:com.example.tests.ContactCreationTests@6979e8cb]">testEmptyContactCreated</td> 
+  <td>main@1918627686</td>   <td></td> </tr>
+<tr bgcolor="f265aa">  <td>15/06/21 18:35:15</td>   <td>23035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactCreationTests.testNonEmptyContactCreated()[pri:0, instance:com.example.tests.ContactCreationTests@6979e8cb]">testNonEmptyContactCreated</td> 
+  <td>main@1918627686</td>   <td></td> </tr>
+<tr bgcolor="64a371">  <td>15/06/21 18:35:19</td>   <td>26676</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.tests.ContactCreationTests@6979e8cb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1918627686</td>   <td></td> </tr>
 </table>
