--- a/addressbook-selenium-test/test-output/index.html
+++ b/addressbook-selenium-test/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>F:\Users\Gena\AppData\Local\Temp\testng-eclipse--2105420369\testng-customsuite.xml</span>
+                    <span>F:\Users\Gena\AppData\Local\Temp\testng-eclipse-1053715624\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -99,6 +99,26 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.example.tests.ContactRemovalTests" hash-for-method="deleteContact">deleteContact</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.example.tests.GroupRemovalTests" hash-for-method="deleteSomeGroup">deleteSomeGroup</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.example.tests.ContactModificationTests" hash-for-method="modifyContact">modifyContact</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.example.tests.GroupModificationTests" hash-for-method="modifySomeGroup">modifySomeGroup</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.example.tests.ContactCreationTests" hash-for-method="testEmptyContactCreated">testEmptyContactCreated</a> <!-- method navigator-link -->
@@ -175,10 +195,70 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.example.tests.GroupRemovalTests</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="deleteSomeGroup">
+                  </a> <!-- deleteSomeGroup -->
+                  <span class="method-name">deleteSomeGroup</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.example.tests.ContactModificationTests</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="modifyContact">
+                  </a> <!-- modifyContact -->
+                  <span class="method-name">modifyContact</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.example.tests.GroupModificationTests</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="modifySomeGroup">
+                  </a> <!-- modifySomeGroup -->
+                  <span class="method-name">modifySomeGroup</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.example.tests.ContactRemovalTests</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="deleteContact">
+                  </a> <!-- deleteContact -->
+                  <span class="method-name">deleteContact</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\Users\Gena\AppData\Local\Temp\testng-eclipse--2105420369\testng-customsuite.xml</span>
+            <span class="header-content">F:\Users\Gena\AppData\Local\Temp\testng-eclipse-1053715624\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -189,9 +269,13 @@
     &lt;classes&gt;
       &lt;class name=&quot;com.example.tests.TestBase&quot;/&gt;
       &lt;class name=&quot;com.example.tests.GroupCreationTests&quot;/&gt;
+      &lt;class name=&quot;com.example.tests.GroupRemovalTests&quot;/&gt;
       &lt;class name=&quot;com.example.tests.ContactCreationTests&quot;/&gt;
       &lt;class name=&quot;com.example.tests.GroupData&quot;/&gt;
+      &lt;class name=&quot;com.example.tests.ContactModificationTests&quot;/&gt;
+      &lt;class name=&quot;com.example.tests.ContactRemovalTests&quot;/&gt;
       &lt;class name=&quot;com.example.tests.ContactData&quot;/&gt;
+      &lt;class name=&quot;com.example.tests.GroupModificationTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -205,7 +289,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (5 classes)</span>
+                <span class="test-name">Default test (9 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -231,28 +315,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testEmptyContactCreated')
 data.setCell(0, 2, 'com.example.tests.ContactCreationTests')
-data.setCell(0, 3, 4778);
+data.setCell(0, 3, 4851);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testNonEmptyContactCreated')
 data.setCell(1, 2, 'com.example.tests.ContactCreationTests')
-data.setCell(1, 3, 3640);
+data.setCell(1, 3, 4137);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testNonEmptyGroupCreation')
 data.setCell(2, 2, 'com.example.tests.GroupCreationTests')
-data.setCell(2, 3, 2432);
+data.setCell(2, 3, 2420);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testEmptyGroupCreation')
-data.setCell(3, 2, 'com.example.tests.GroupCreationTests')
-data.setCell(3, 3, 2137);
+data.setCell(3, 1, 'modifyContact')
+data.setCell(3, 2, 'com.example.tests.ContactModificationTests')
+data.setCell(3, 3, 2408);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'modifySomeGroup')
+data.setCell(4, 2, 'com.example.tests.GroupModificationTests')
+data.setCell(4, 3, 2387);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'testEmptyGroupCreation')
+data.setCell(5, 2, 'com.example.tests.GroupCreationTests')
+data.setCell(5, 3, 1810);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'deleteSomeGroup')
+data.setCell(6, 2, 'com.example.tests.GroupRemovalTests')
+data.setCell(6, 3, 1235);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'deleteContact')
+data.setCell(7, 2, 'com.example.tests.ContactRemovalTests')
+data.setCell(7, 3, 1200);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 20 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -285,34 +385,94 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">testEmptyGroupCreation</span>
-                <span class="method-start">6843 ms</span>
+                <span class="method-start">5403 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testNonEmptyGroupCreation</span>
-                <span class="method-start">8981 ms</span>
+                <span class="method-start">7214 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">11413 ms</span>
+                <span class="method-start">9635 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.example.tests.ContactModificationTests</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">10067 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">modifyContact</span>
+                <span class="method-start">14705 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">17113 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.example.tests.GroupModificationTests</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">17684 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">modifySomeGroup</span>
+                <span class="method-start">22359 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">24746 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.example.tests.GroupRemovalTests</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">25154 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">deleteSomeGroup</span>
+                <span class="method-start">29851 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">31087 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.example.tests.ContactRemovalTests</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">31396 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">deleteContact</span>
+                <span class="method-start">35657 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">36857 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.example.tests.ContactCreationTests</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">12205 ms</span>
+                <span class="method-start">37132 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">testEmptyContactCreated</span>
-                <span class="method-start">18260 ms</span>
+                <span class="method-start">41948 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testNonEmptyContactCreated</span>
-                <span class="method-start">23038 ms</span>
+                <span class="method-start">46800 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">26679 ms</span>
+                <span class="method-start">50937 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
